# scion-class-browser

./: .gitignore  README.markdown  README.md  scion-browser.cabal  scion-class-browser.cabal
data/: base-unicode-symbols.txt  containers.txt  ghc-mtl.txt  ghc-prim.txt  haskell2010.txt  haskell98.txt  html.txt  vector.txt  wai.txt  warp.txt
docs/: LICENSE  loadperf.txt
src/: Main.hs
src/Scion/: Browser.hs  Hoogle.hs  PackageDB.hs  Packages.hs  PersistentBrowser.hs  PersistentHoogle.hs
src/Scion/Browser/: Build.hs  Builder.hs  FileUtil.hs  FromMissingH.hs  HSEInstances.hs  HSEJsonInstances.hs  Installed.hs  Parser.hs  Query.hs  TempFile.hs  Types.hs  Util.hs
src/Scion/Browser/Instances/: Json.hs  NFData.hs  Serialize.hs
src/Scion/Browser/Json/: Commands.hs  Instances.hs
src/Scion/Browser/Parser/: Documentable.hs  Internal.hs  Stage1.hs  Stage2.hs
src/Scion/Hoogle/: Converter.hs  Parser.hs  Types.hs  Util.hs
src/Scion/Hoogle/Instances/: Json.hs
src/Scion/PackageDB/: Builder.hs  Installed.hs  Parser.hs  Util.hs
src/Scion/PackageDB/Parser/: Stage1.hs  Stage2.hs
src/Scion/PersistentBrowser/: Build.hs  DbTypes.hs  FileUtil.hs  FromMissingH.hs  Parser.hs  Query.hs  TempFile.hs  ToDb.hs  Types.hs  Util.hs
src/Scion/PersistentBrowser/Instances/: Json.hs
src/Scion/PersistentBrowser/Parser/: Documentable.hs  Internal.hs
src/Scion/PersistentHoogle/: Parser.hs  Types.hs  Util.hs
src/Scion/PersistentHoogle/Instances/: Json.hs
src/Server/: Commands.hs  PersistentCommands.hs
test/: Test.hs
test/Scion/Browser/: ParserTests.hs
