name:           scion-browser
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

library
  hs-source-dirs:  src
  build-depends:   
    base             == 4.*,
    mtl              >= 2,
    derive           >= 2.5 && < 3,
    text             == 0.11.*,
    parsec           >= 3 && < 4,
    cereal           == 0.3.*,
    Cabal            >= 0.10, 
    haskell-src-exts >= 1.11 && < 2,
    process          >= 1 && < 2,
    tar              == 0.3.*,
    zlib             == 0.5.*,
    HTTP             >= 4000 && < 5000,
    deepseq          >= 1.1 && < 2,
    MissingH         == 1.*,
    aeson            >= 0.3.2,
    parallel-io      >= 0.3,
    -- For Scion.packages (provisional)
    ghc-paths        == 0.1.*
  
  if !os(mingw32)
    build-depends:
      unix           >= 2 && < 3
  
  if impl(ghc >= 7.0)
    build-depends:
      containers     >= 0.2 && < 0.5,
      directory      == 1.1.*,
      filepath       == 1.2.*,
      bytestring,
      -- For Scion.Packages (provisional)
      ghc            >= 7
  else
    build-depends:
      containers     >= 0.2 && < 0.4,
      directory      == 1.0.*,
      filepath       == 1.1.*,
      -- For Scion.Packages (provisional)
      ghc            >= 6.10 && < 6.13
  
  exposed-modules:
    Scion.Browser,
    Scion.Browser.Query,
    Scion.Browser.Build,
    Scion.Hoogle
    
  ghc-options: -rtsopts -Wall -fno-warn-unused-do-bind -fno-warn-orphans -threaded

executable scion-browser
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:
    haskeline        >= 0.6,
    attoparsec       >= 0.8,
    -- From library
    base             == 4.*,
    mtl              >= 2,
    derive           >= 2.5 && < 3,
    text             == 0.11.*,
    parsec           >= 3 && < 4,
    cereal           == 0.3.*,
    Cabal            >= 0.10, 
    haskell-src-exts >= 1.11 && < 2,
    process          >= 1 && < 2,
    tar              == 0.3.*,
    zlib             == 0.5.*,
    HTTP             >= 4000 && < 5000,
    deepseq          >= 1.1 && < 2,
    MissingH         == 1.*,
    aeson            >= 0.3.2,
    parallel-io      >= 0.3,
    -- For Scion.packages (provisional)
    ghc-paths        == 0.1.*
  
  if !os(mingw32)
    build-depends:
      unix           >= 2 && < 3
  
  if impl(ghc >= 7.0)
    build-depends:
      containers     >= 0.2 && < 0.5,
      directory      == 1.1.*,
      filepath       == 1.2.*,
      bytestring,
      -- For Scion.Packages (provisional)
      ghc            >= 7
  else
    build-depends:
      containers     >= 0.2 && < 0.4,
      directory      == 1.0.*,
      filepath       == 1.1.*,
      -- For Scion.Packages (provisional)
      ghc            >= 6.10 && < 6.13
    
  ghc-options: -rtsopts -Wall -fno-warn-unused-do-bind -fno-warn-orphans -threaded

