name:           scion-class-browser
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple

executable hoogle-parsec
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base, parsec >= 3, cereal, derive, mtl, directory, filepath, pretty-show, deepseq, bytestring,
                   ghc, ghc-paths, Cabal, process, Unixutils
  other-modules:   Scion.PackageDB.Parser, Scion.PackageDB.Installed, Scion.PackageDB.Builder

